# native-visio-client

./: .gitmodules  CMakeLists.txt
src/: CMakeLists.txt  main.cpp  main_window.cpp  main_window.h  medooze_mgr.cpp  medooze_mgr.h  monitor_manager.cpp  monitor_manager.h  peerconnection.cpp  peerconnection.h  peerconnection_manager.cpp  peerconnection_manager.h  session_description_obserser.h  widget.cpp  widget.h  y4msource.cpp  y4msource.h
